--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hello! Welcome to My GitHub Page</h1>
     <p>This is my personal site hosted on GitHub Pages.</p>
-    <a href="cv.pdf">View my CV</a>
+    <a href="Business Analyst_Samruddhi Chaudhari.pdf">View my CV</a>
 </body>
 </html>
